--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -657,3 +657,16 @@ div.dataTableScroller {
     }
   }
 }
+
+@media only screen and (max-width: 700px) {
+  table.dataTable th.label,
+  table.dataTable td.label,
+  table.subActionsDataTable td.label,
+  table.actionsDataTable td.label {
+    position: static;
+  }
+
+  table tbody {
+    display: block;
+  }
+}
