Add support for up to 4 fields to multipairfield

--- a/plugins/CoreHome/angularjs/multipairfield/multipairfield.directive.less
+++ b/plugins/CoreHome/angularjs/multipairfield/multipairfield.directive.less
@@ -18,6 +18,7 @@
     &:not(.has1Fields) {
       .fieldUiControl {
         display: inline-block;
+        padding-right: 0.75rem;
       }
     }
 
@@ -33,7 +34,7 @@
   
     &.has3Fields {
       .fieldUiControl1 {
-        width: 140px;
+        width: 120px;
       }
       .fieldUiControl2,
       .fieldUiControl3 {
@@ -43,12 +44,12 @@
   
     &.has4Fields {
       .fieldUiControl1 {
-        width: 140px;
+        width: 120px;
       }
       .fieldUiControl2,
       .fieldUiControl3,
       .fieldUiControl4 {
-        width: 150px;
+        width: 148px;
       }
     }
   }
